fix: resolve search encoding and Z-index in unminified files

--- a/assets/css/unminified/styles.css
+++ b/assets/css/unminified/styles.css
@@ -309,7 +309,7 @@ body.modal-open {
 }
 
 #fileModal {
-  z-index: 1100;
+  z-index: 1300;
 }
 
 .modal.fullscreen {
